Fix 404 error: Add basename to React Router and 404.html for GitHub Pages SPA routing

--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
     <title>cafe manjo's</title>
+    <script>
+      // Redirect for GitHub Pages SPA routing
+      // This handles the ?/path format that 404.html creates
+      (function() {
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect !== location.href) {
+          history.replaceState(null, null, redirect);
+        }
+      })();
+    </script>
   </head>
 
   <body>
